--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
 Requirements for Simple_Cal. is:
-    1.Python (Because iI have only used "built-in Python" for this project.)
+
+    1.Python (Because I have only used "built-in Python" for this project.)
